--- a/templates/1.html
+++ b/templates/1.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>这是只属于你一个人的礼物</title>
+<title>羊毛生日快乐</title>
 
 <link rel="stylesheet" href="../static/css/shenri.css">
 	<style>
@@ -164,9 +164,11 @@ body {
 <div class="before"></div>
 <div class="after"></div>
 </div>
-<h1>一辈子很短，如白驹过隙，转瞬即逝</h1>
-<h2>可这种心情很长，如高山大川，延绵不绝</h2>
-<span>21岁，祝你生日快乐，天天快乐</span>
+<h1>愿考研顺利，不负努力</h1>
+<h2>愿日日开心，美食成群</h2>
+<h3>旦逢良辰，顺颂时宜</h2>
+<h4>一岁一礼，一寸欢喜</h4>	    
+<span>生日快乐，不止今天</span>
 <div class="candle">
 <div id="flame" class="lit"></div>
 </div>
